--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,16 @@
     "@prisma/client": "^6.9.0",
     "bson": "^6.10.4",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.18.0",
+    "neo4j-driver": "^5.28.1"
   },
   "devDependencies": {
     "@types/bson": "^4.2.4",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.1",
     "prisma": "^6.9.0",
     "tsx": "^4.20.3",
