--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^6.0.0",
     "bson": "^6.10.4",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
   },
